--- a/music_player/requirements.txt
+++ b/music_player/requirements.txt
@@ -4,6 +4,7 @@ distlib==0.3.6
 dj-database-url==2.0.0
 Django==4.2.1
 django-heroku==0.3.1
+django-on-heroku==1.1.2
 filelock==3.12.0
 gunicorn==20.1.0
 Pillow==9.5.0
