--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ distlib==0.3.6
 dj-database-url==2.0.0
 Django==4.2.1
 django-heroku==0.3.1
+django-on-heroku==1.1.2
 filelock==3.12.0
 gunicorn==20.1.0
 Pillow==9.5.0
 pipenv==2023.4.29
 platformdirs==3.5.0
 psycopg2==2.9.6
+psycopg2-binary==2.9.6
 sqlparse==0.4.4
 typing_extensions==4.5.0
 virtualenv==20.23.0
